--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,12 @@
+h1{
+    margin-left: 20px;  
+    align-content: flex-start;
+}  
+
 .fotos_size{
     width: 91px;
     height: 75px;
+    margin-top: 20px;
     margin-left: 20px;
     border-style: solid;  
     border-width: 3px;  
@@ -13,12 +19,10 @@ p {
     margin-left: 20px;
   }
 
-h1{
-    margin-left: 20px;  
-}  
- /* .sectionCategories{
+  section{
     display: flex;
     justify-content: center;
-    align-items: center;  
-}*/
-
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;  
+}
