--- a/styles/index.css
+++ b/styles/index.css
@@ -1,35 +1,52 @@
+@import "./links.css";
+
 h1{
     margin-left: 20px;  
-    align-content: flex-start;
-}  
-
-.fotos_size{
-    width: 91px;
-    height: 75px;
-    margin-top: 20px;
-    margin-left: 20px;
-    border-style: solid;  
-    border-width: 3px;  
 }
 
 p {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: medium;
     font-weight: bold;
-    margin-left: 20px;
+    margin-left: 5px;
     text-align: center;
-  }
+}
 
-  /*.alignIcons{
+.newsletter {
+    background-color: #C7F8EC;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
+    align-items: center;  
     flex-direction: column;
-    flex-wrap: wrap;  
-}*/
+}
 
-.alignIcons {
+body {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+}
 
-  }
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+    flex-direction: column;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+}
