added detail.css added generalArticle.css added menu.css added product.css added related.css modified article.html modified links.css

--- a/styles/links.css
+++ b/styles/links.css
@@ -1,3 +1,6 @@
 @import "./categories_styles/categories.css";
 @import "./general_styles/general.css";
 @import "./newsletter/newsletter.css";
+@import "./detail_styles/detail.css";
+@import "./related_styles/related.css";
+@import "./menu_styles/menu.css";
