modified article.html modified styles/detail_styles/detail.css modified styles/general_styles/generalArticle.css modified styles/links.css modified styles/product_styles/product.css

--- a/styles/detail_styles/detail.css
+++ b/styles/detail_styles/detail.css
@@ -1,4 +1,4 @@
-#compraDetalle {
+/*#compraDetalle {
     width: ; 
     display: flex;   
     align-content: flex-start;
@@ -8,4 +8,4 @@
 .alignDescription {
     width: auto;
 
-}
+}*/
