--- a/styles/links.css
+++ b/styles/links.css
@@ -4,3 +4,4 @@
 @import "./detail_styles/detail.css";
 @import "./related_styles/related.css";
 @import "./menu_styles/menu.css";
+@import "./product_styles/product.css";
