modified: styles/detail_styles/detail.css, styles/general_styles/generalArticle.css, styles/links.css, styles/product_styles/product.css, styles/related_styles/related.css

--- a/styles/general_styles/generalArticle.css
+++ b/styles/general_styles/generalArticle.css
@@ -1,5 +1,5 @@
 
-body {
+/*body {
     width: 457px;
     height: 682px;
     display: flex;
@@ -10,5 +10,5 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;  
-}
+}*/
 
