--- a/styles/detail_styles/detail.css
+++ b/styles/detail_styles/detail.css
@@ -1,3 +1,30 @@
+h3 {
+   margin-left: 20px; 
+   text-align: justify;
+}
+
+p {
+    margin-left: 20px; 
+    text-align: justify;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: medium;
+    font-weight: normal;
+    margin-left: 5px;
+}
+
+.alignDescription {
+    width: 87px;
+    height: 96px;;
+    margin-top: 100px;
+    margin-left: 5px;
+    /*border-style: solid;  
+    border-width: 3px;  */
+    display: flex;
+    align-self: flex-start;
+    flex-direction: column;
+}
+
+
 /*#compraDetalle {
     width: ; 
     display: flex;   
