--- a/styles/links.css
+++ b/styles/links.css
@@ -5,3 +5,4 @@
 @import "./related_styles/related.css";
 @import "./menu_styles/menu.css";
 @import "./product_styles/product.css";
+@import "./header_styles/header.css";
