--- a/styles/product_styles/product.css
+++ b/styles/product_styles/product.css
@@ -1,10 +1,10 @@
 .foto_grande {
     width: 162px;
     height: 111px;;
-    margin-top: 10px;
+    margin-top: 100px;
     margin-left: 5px;
     border-style: solid;  
-    border-width: 6px;  
+    border-width: 3px;  
     display: flex;
     align-self: center;
 }
@@ -12,10 +12,10 @@
 .alignBigPhoto {
     width: 162px;
     height: 111px;;
-    margin-top: 10px;
+    margin-top: 100px;
     margin-left: 5px;
-    border-style: solid;  
-    border-width: 3px;  
+    /*border-style: solid;  
+    border-width: 3px;  */
     display: flex;
     align-self: center;
     flex-direction: column;
@@ -24,10 +24,10 @@
 .fotos_mini {
     width: 32px;
     height: 33.39px;;
-    margin-top: 10px;
+    margin-top: 75px;
     margin-left: 5px;
     border-style: solid;  
-    border-width: 6px;  
+    border-width: 3px;  
     display: flex;
     align-self: center;
 }
@@ -35,27 +35,16 @@
 .alignMiniPhotos {
     width: 32px;
     height: 33.39px;
-    margin-top: 10px;
+    margin-top: 75px;
     margin-left: 5px;
-    border-style: solid;  
-    border-width: 3px;  
+    /*border-style: solid;  
+    border-width: 3px;  */
     display: flex;
     align-self: center;
     flex-direction: row;
 }
 
-/*.alignDescription {
-    width: 87px;
-    height: 96px;
-    margin-top: 10px;
-    margin-left: 5px;
-    border-style: solid;  
-    border-width: 3px;  
-    display: flex;
-    align-self: center;
-}
-
-#product {
+/*#product {
     display: flex;
     flex-direction: column;
     justify-content: center;
