--- a/styles/header_styles/header.css
+++ b/styles/header_styles/header.css
@@ -16,7 +16,7 @@ alignIcons {
     margin-top: 100px;
     margin-left: 5px;
     display: flex;
-    align-self: ;
+    align-self: flex-end;
     flex-direction: row;  
 }
 
