--- a/styles/newsletter/newsletter.css
+++ b/styles/newsletter/newsletter.css
@@ -1,7 +1,12 @@
 .newsletter {
     background-color: #C7F8EC;
+    width: 100%;
+    min-width: 450px;
+    max-width: 800px;
+    height: 120px;
+    margin-bottom: 20px;
     display: flex;
-    justify-content: center;
-    align-items: center;  
     flex-direction: column;
+    justify-content: flex-start;  
+    align-items: center;   
 }
