--- a/styles/related_styles/related.css
+++ b/styles/related_styles/related.css
@@ -1,24 +1,30 @@
 h2 {
-   margin-left: 10px; 
-   text-align: justify;
+    text-align: center;
 }
 
-.fotos_size {
-    width: 61px;
-    height: 108.53px;
-    margin-top: 100px;
-    margin-left: 5px;
-    border-style: solid;  
-    border-width: 3px;  
+#relatedItems {
+    width: 70%;
+    min-width: 450px;
+    max-width: 800px;
     display: flex;
-    align-self: center;
+    flex-direction: column;
+    align-items: flex-start;
+    
 }
 
 .alignRelated {
-    width: 61px;
-    height: 108.53px;
+    
     display: flex;
     align-self: flex-start;
     justify-content: left;
     
 }
+
+.relatedImages {
+    width: 100px;
+    height: 140px;
+    margin-right: 20px;
+    border-style: solid;  
+    border-width: 1px;  
+}
+
